--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ title                    : "Thinking in Salesforce"
 title_separator          : "-"
 name                     : "Michal Verner"
 description              : "Portfolio site. Plan for future is to create blog about Salesforce development."
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://vernemi2.github.io
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "vernemi2/vernemi2"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
