--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "vernemi2"
+  facebook         : 
   foursquare       :
   github           : "vernemi2"
   gitlab           :
