--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Thinking in Salesforce"
 title_separator          : "-"
 name                     : "Michal Verner"
 description              : "Portfolio site. Plan for future is to create blog about Salesforce development."
-url                      :
+url                      : "http://www.michal-verner.co.uk/"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "vernemi2/vernemi2.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
@@ -261,6 +261,6 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: true      
+      author_profile: true
 
 remote_theme: "mmistakes/minimal-mistakes"
